--- a/sonarqube-scanner-maven/maven-basic/pom.xml
+++ b/sonarqube-scanner-maven/maven-basic/pom.xml
@@ -12,8 +12,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.release>11</maven.compiler.release>
-  </properties>
+ <!-- <maven.compiler.release>11</maven.compiler.release> -->
+   </properties>
 
   <dependencies>
     <dependency>
